k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-test-__CI_PROJECT_NAME__
  namespace: cat-__NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - cat-test-__CI_PROJECT_NAME__.prod.gke.papers.tech
      secretName: cat-test-__CI_PROJECT_NAME__-prod-tls
    - hosts:
        - cat-test.foundry.airgap.it
      secretName: cat-test-foundry-__CI_PROJECT_NAME__-prod-tls
  rules:
    - host: cat-test-__CI_PROJECT_NAME__.prod.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cat-test-__CI_PROJECT_NAME__-service
                port:
                  number: 80
    - host: cat-test.foundry.airgap.it
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cat-test-__CI_PROJECT_NAME__-service
                port:
                  number: 80
